MOW-635 missing overrides; avoid scrollbar in FF
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@64887 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
@@ -1314,6 +1314,7 @@ $duration: 0.2s;
     	.content {
     		height: 92px;
     		width: 90px;
+    		overflow: hidden;
     	}
     	
     	.groupImgHolder {
